<resources>

    <string name="app_name">beCycle</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">beCycle</string>
    <string name="system_all">Tous</string>
    <string name="system_brussels">Brussels (Villo)</string>
	<string name="system_antwerp">Antwerp (AVelo)</string>
	<string name="system_namur">Namur (Li Bia)</string>
	<string name="label_syncing">Syncing...</string>
	<string name="tab_all">All</string>
	<string name="tab_nearby">Nearby</string>
	<string name="tab_favs">Favorites</string>
	<string name="label_empty_stationlist">No stations found</string>
	<string name="action_map">Map</string>
	<string name="action_start">Start</string>
	<string name="action_stop">Stop</string>
	<string name="header_address">ADDRESS</string>
	<string name="header_availability">AVAILABILITY</string>
	<string name="label_loading">Loading...</string>
	<string name="label_not_available">Not available.</string>
	<string name="label_bike_availability_none">No bikes available at this moment</string>
	<string name="label_bike_availability_one">Hurry, only 1 left!</string>
	<string name="label_bike_availability_multiple">%d bikes available</string>
	<string name="label_parking_availability_none">Full</string>
	<string name="label_parking_availability_one">Hurry, only 1 spot left!</string>
	<string name="label_parking_availability_multiple">%d spots available</string>
	<string name="action_add_to_favorite">Add to favorites</string>
	<string name="action_remove_from_favorite">Remove from favorites</string>
	<string name="action_directions">Directions</string>
	<string name="title_nearby">Nearby</string>
	<string name="dialog_title_about">About</string>
	<string name="dialog_content_about" formatted="false">Application by Michaël Uyttersprot / eMich Labs.\n\nThis application is not official in any way and does not guarantee 100% correctness.</string>
	<string name="dialog_action_feedback">Rate me!</string>
	<string name="dialog_action_ok">OK</string>
	<string name="action_about">About</string>
	<string name="dialog_title_error_parsing">Error</string>
	<string name="dialog_content_error_parsing">There was an error parsing the content. Please try again later.</string>
	<string name="dialog_title_error_connecting">Error</string>
	<string name="dialog_content_error_connecting">There was an error connecting. Please try again later.</string>
	<string name="label_closed">This station is closed at the moment</string>
	<string name="label_card_accepted">Payment can be done by using a credit card</string>
	<string name="dialog_title_map_mode">Map mode</string>
	<string name="dialog_action_cancel">Cancel</string>
</resources>